# sqk

./: CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  build.rs  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
src/parser/: mod.rs
src/parser/args/: mod.rs
tools/: install.ps1  install.sh
