[package]
name = "sqk"
version = "0.1.0"
publish = false
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
repository = "https://github.com/chfuchte/sqk"
homepage = "https://github.com/chfuchte/sqk"
description = "A lightweight, vim-inspired terminal database explorer."

[[bin]]
name = "sqk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["cargo"] }
